@startuml
title One Line Picture

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho

class Game {
    - ArrayList<Player> players
    - ArrayList<Stroke> strokes
    - Stroke currentStroke
    - int currentPlayerIndex
    - boolean started
    - boolean finished
    - int maxPlayers
    - int totalTurns
    - int completedTurns
    - long turnTimeLimit
    - long turnStartTime

    + addPlayer(Player player) boolean
    + startGame() void
    + startStroke(String playerId, Point point) boolean
    + addPoint(String playerId, Point point) boolean
    + endStroke(String playerId) boolean
    + nextTurn() void
    + getCurrentPlayer() Player
    + isTurnExpired() boolean
    + isFinished() boolean
    + getStrokes() ArrayList<Stroke>
}

class Player {
    - String id
    - String name

    + Player(String id, String name)
    + getId() String
    + getName() String
}

class Stroke {
    - String playerId
    - ArrayList<Point> points

    + Stroke(String playerId)
    + addPoint(Point point) void
    + getPlayerId() String
    + getPoints() ArrayList<Point>
}

class Point {
    - double x
    - double y

    + Point(double x, double y)
    + getX() double
    + getY() double
}

class GameServer {
    - Game game
    - ArrayList<ClientConnection> clients

    + GameServer(Game game)
    + start(int port) void
    + stop() void
    + handleMessage(ClientConnection client, String message) void
    + broadcast(String message) void
    + getGame() Game
}

class GameClient {
    - String playerId
    - String hostAddress
    - boolean connected

    + connect(String host, int port) void
    + disconnect() void
    + send(String message) void
    + receive(String message) void
    + isConnected() boolean
}

class ClientConnection {
    - String playerId
    - boolean connected

    + send(String message) void
    + close() void
    + isConnected() boolean
}

class CanvasController {
    - GameClient client
    - boolean drawing
    - int activeTouchId
    - double canvasWidth
    - double canvasHeight

    + CanvasController(GameClient client)
    + pointerPressed(double x, double y) void
    + pointerMoved(double x, double y) void
    + pointerReleased() void
    + pointerExited() void
    + touchStarted(int touchId, double x, double y) void
    + touchMoved(int touchId, double x, double y) void
    + touchEnded(int touchId) void
    + isInsideCanvas(double x, double y) boolean
}

class ReplayController {
    - ArrayList<Stroke> strokes
    - int strokeIndex
    - int pointIndex
    - double playbackSpeed

    + ReplayController(ArrayList<Stroke> strokes)
    + startReplay() void
    + nextPoint() Point
    + isFinished() boolean
}

GameServer *-- Game
GameServer o-- ClientConnection
GameServer ..> GameClient

Game *-- Player
Game *-- Stroke
Game --> ReplayController

Stroke *-- Point

GameClient --> CanvasController
GameClient --> Player

CanvasController ..> Point

ReplayController --> Stroke

@enduml